test/tests/operators/to_google_secops/empty_region.txt
error: expected a non-empty string
 --> tests/operators/to_google_secops/empty_region.tql:6:75
  |
6 | to_google_secops _dry_run=true, mode="raw_log", project="PROJECT", region="",
  |                                                                           ^^ 
  |
